# emscripten-wasm-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: package.yml
package/: index.ts  module.d.ts  module.js  package-lock.json  package.json
scripts/: post-build.cjs
src/: Transform.cpp  Transform.h  Vector.cpp  Vector.h  bindings.cc  bindings.cpp  math.h  vectorization.h
